# discourse-fileset-example

./: CMakeLists.txt  ReadMe.md
.github/workflows/: test.yaml
application/: CMakeLists.txt  app.cpp
lib1/: CMakeLists.txt
